Sonar warning massacre   Code cleanup